--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
-<div class="container">
-  <div class="form-container">
-    <h1>Club Paramoteur Auth</h1>
-    <form>
-      <input type="email" placeholder="Email" id="email">
-      <input type="password" placeholder="Password" id="password">
-      <button type="submit" id="login-btn">Login</button>
-    </form>
-    <p>Don't have an account? <a href="#">Sign up</a></p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Login</title>
+  <link rel = "stylesheet" href = "main.css">
+</head>
+<body>
+  <div class = "login-container">
+    <div id= "main">
+      <h1>Sign In</h1>
+      <input id = "email" type = "text" placeholder = "Email"></input>
+      <input id = "password" type = "password" placeholder = "Password"></input>
+      <button id = "submit">Submit</button>
+      <p><span>or</span></p>
+      <button id = "sign-up">Sign Up</button>
+    </div>
+
+    <div id = "create-acct">
+      <h1>Create an Account</h1>
+      <input id = "email-signup" type = "text" placeholder = "Email *"></input>
+  <input id = "confirm-email-signup" type = "email" placeholder = "Confirm Email *"></input>
+      <input id = "password-signup" type = "password" placeholder = "Password *"></input>
+      <input id = "confirm-password-signup" type = "password" placeholder = "Confirm Password *"></input>
+      <button id = "create-acct-btn">Create Account</button>
+      <button id = "return-btn">Return to Login</button>
+    </div>
   </div>
-</div>
+  <script type = "module" src = "script.js"></script>
+</body>
+</html>
